test/files/neg/implicit-ambiguous-2.check
implicit-ambiguous-2.scala:10: error: Could not prove Int =!= Int
  implicitly[Int =!= Int]
            ^
one error found
